<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheDrinkChallenge</string>
    <string name="Take_Test_text">Take Test</string>
	<string name="Call_Taxi_text">Call Taxi</string>
	<string name="Achievements_text">Achievements</string>
	<string name="Claim_Rewards_text">Claim Rewards</string>
	<string name="Block_Numbers_text">Block Numbers</string>
	<string name="Share_Location_text">Share Location</string>
	<string name="BAC_text">BAC Table</string>
	<string name="contact1">Contact: </string>
	<string name="contact2">Contact: </string>
	<string name="contact3">Contact: </string>
	<string name="contact4">Contact: </string>
	<string name="contact5">Contact: </string>
	<string name="testResult">Test Result: </string>
	<string name="pointsBalance">Balance: </string>
	<string name="monthDay">Day of Test in 4 weeks: </string>
	<string name="networkTime">Network time: </string>
	<string name="daysInRow7"></string>
	<string name="daysInRow14"></string>
	<string name="daysInRow28"></string>
	<string name="reward"></string>
	<string name="balanceMainScreen_text">"Balance: "</string>
			
</resources>
