<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/daysInRow7String"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/daysInRow7"
    />
    <TextView
        android:id="@+id/daysInRow14String"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/daysInRow14"
    />
    <TextView
        android:id="@+id/daysInRow28String"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/daysInRow28"
    />

</LinearLayout>
