<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thedrinkchallenge.www.MainActivity" >

    <Button
        android:id="@+id/takeTestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Take_Test_text" 
        android:onClick="takeTestAction" />

    

    <Button
        android:id="@+id/achievementsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Achievements_text" 
        android:onClick="displayAchievements"/>
    
     <Button
        android:id="@+id/claimRewardsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Claim_Rewards_text" />
     
      
      
       
        <Button
        android:id="@+id/BACButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BAC_text" 
        android:onClick="showBacTable"/>
        
        
</LinearLayout>